k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudapp-deploy
  namespace: cloudapp
spec:
  selector:
    matchLabels:
      app: cloudapp
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      namespace: cloudapp
      labels:
        app: cloudapp
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret 
      containers:
        - name: cloudapp
          image: ghcr.io/maverickkeypuncher/dj-cloudapp:main-1ab5e40
          securityContext:
            runAsUser: 0
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 5001
