k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudapp-service
  namespace: cloudapp
spec:
  type: NodePort
  selector:
    app: cloudapp
  ports:
    - port: 5050
      targetPort: 5001
