k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: cloudapp
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
